<resources>
    <string name="app_name">RCO Trucks</string>
    <string name="error_unable_to_login">Invalid username or password.\n\nPlease try again or contact support to have your account checked.</string>
    <string name="error_unable_to_sync_app">Unable to sync. Please check your connectivity and try again or contact support.</string>
    <string name="error_map_connectivity">Unable to load base map, please check your connection and try again.</string>
    <string name="error_map_connectivity_title">Map view</string>
    <string name="error_gauges_connectivity">Unable to load gauges view, please check your connection and try again.</string>
    <string name="error_gauges_connectivity_title">Gauges view</string>
    <string name="error_data_load">Unable to access data. Please try to sync, clear application data or contact support.</string>
    <string name="error_lost_Connection">please check your connection and try again</string>
    <string name="dashboard_title_annual_inspection">ANNUAL INSPECTION</string>
    <string name="dashboard_title_bol">BOL</string>
    <string name="dashboard_title_camerarear">CAMERA REAR</string>
    <string name="dashboard_title_delivery">DELIVERY</string>
    <string name="dashboard_title_drive">DRIVE</string>
    <string name="dashboard_title_map">MAP</string>
    <string name="dashboard_title_dvir">PRETRIP</string>
    <string name="dashboard_title_dvir_update">PRETRIP UPDATE</string>
    <string name="dashboard_title_driver_settings">DRIVER SETTINGS</string>
    <string name="dashboard_title_fuel_receipts">FUEL RECEIPTS</string>
    <string name="dashboard_title_receipts">RECEIPTS</string>
    <string name="dashboard_title_gauges">GAUGES</string>
    <string name="dashboard_title_streaming">STREAMING</string>
    <string name="dashboard_title_settings">SETTINGS</string>
    <string name="dashboard_title_syncstatusyellow">SYNC</string>
    <string name="dashboard_title_sync_now">SYNC NOW</string>
    <string name="dashboard_title_log_book">LOGBOOK</string>
    <string name="dashboard_title_forms">FORMS</string>
    <string name="dashboard_title_trucks">Trucks</string>
    <string name="dashboard_title_feedback">FEEDBACK</string>
    <string name="dashboard_title_help">HELP</string>
    <string name="dvirs_title">Pretrip Check</string>
    <string name="fuel_receipts_title">Fuel Receipts</string>
    <string name="dashboard_title_ifta">IFTA</string>
    <string name="dashboard_title_logout">LOGOUT</string>
    <string name="drive_title">Drive</string>
    <string name="diagnosticslist_title">Diagnostics</string>
    <string name="malfunctionslist_title">Malfunctions</string>
    <string name="settings_title">Settings</string>
    <string name="settings_information_title">Information</string>
    <string name="forms_title">Forms</string>
    <string name="trucks_title">Trucks</string>
    <string name="camera_prompt">SelectPhoto or take photo</string>
    <string name="item_select">Select</string>
    <string name="item_take">Take</string>
    <string name="item_cancel">Cancel</string>
    <string name="mid_night">MID NIGHT</string>
    <string name="noon">NOON</string>
    <string name="total_hours">Total hours: 24</string>
    <string name="violations">Violations</string>
    <string name="driving_beyond_11_id">395.3A3-PROP</string>
    <string name="driving_beyond_11_desc">Driving beyond 11 hour driving limit. (Property Carrying Vehicle)</string>
    <string name="driving_beyond_8_id">395.3(a)(3)(ii)</string>
    <string name="driving_beyond_8_desc">Driving beyond 8 hour driving limit since the end of the last on duty, off duty, or sleeper period of at least 30 minutes</string>
    <string name="driving_beyond_14_id">395.3A2-PROP</string>
    <string name="driving_beyond_14_desc">Driving beyond 14 hour duty period (Property carrying vehicle)</string>
    <string name="sleeper_berth_7_id">395.1(a)(ii)(B)</string>
    <string name="sleeper_berth_7_desc">In the previous shift you didn\'t have 7 continuous hours Sleeper Berth</string>
    <string name="sleeper_berth_10_id">395.1(a)(ii)(C)</string>
    <string name="sleeper_berth_10_desc">In the previous shift you didn\'t have 10 totals hours Sleeper Berth</string>
    <string name="home">Home</string>
    <string name="previous">Prev</string>
    <string name="certify">Certify</string>
    <string name="recertify">ReCertify</string>
    <string name="sign">Sign</string>
    <string name="next">Next</string>
    <string name="certify_title">\"Certify : \"</string>
    <string name="certify_msg">I hereby certify that my data entries and my record of duty status for this 24‐hour period are true and correct.</string>
    <string name="notification_title">Notification</string>
    <string name="certify_first_msg">Please Certify first!</string>
    <string name="not_ready">Not Ready</string>
    <string name="agree">Agree</string>
    <string name="text_ta">N/A</string>
    <string name="text_pilot">N/A</string>
    <string name="text_rest">N/A</string>
    <string name="text_love">N/A</string>
    <string name="text_drive">Driving: %s hrs</string>
    <string name="text_break">Break: %s hrs</string>
    <string name="text_miles">%d miles</string>
    <string name="text_cycle">Cycle: %s hrs</string>
    <string name="text_shift">Shift: %s hrs</string>
    <string name="forms_title_driver_medical">Driver Medical</string>
    <string name="forms_title_dm">DM</string>
    <string name="forms_title_skill_performance">Skill Performance Evaluation(SPE)</string>
    <string name="forms_title_skill_performance_just">Skill Performance Evaluation</string>
    <string name="forms_title_spe">SPE</string>
    <string name="forms_title_employment_record">Employment Record</string>
    <string name="forms_title_der">DER</string>
    <string name="forms_title_application">Application for Employment</string>
    <string name="forms_title_driver_application">Driver Application</string>
    <string name="forms_title_driver_violation">Driver Violation</string>
    <string name="field_title_app_type">Application Type </string>
    <string name="field_title_desc_of_op">Description of operation</string>
    <string name="field_title_desc_of_veh">Description of vehicle\'s</string>
    <string name="field_title_instructor">Instructor</string>
    <string name="field_unilateral_value">Unilateral</string>
    <string name="field_unilateral"> </string>
    <string name="field_joint">Joint</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_first_name">First Name</string>
    <string name="field_maiden_name">Maiden Name</string>
    <string name="field_sex">Sex</string>
    <string name="field_address">Address</string>
    <string name="field_state">State</string>
    <string name="field_city">City</string>
    <string name="field_zipcode">Zipcode</string>
    <string name="field_home_phone">Home Phone</string>
    <string name="field_cell">Cell</string>
    <string name="field_drivers_license">Driver\'s license#</string>
    <string name="field_drivers_license_state">Driver\'s license state</string>
    <string name="field_description_of_impairment">Description of impairment or amputation</string>
    <string name="field_type_of_prosthesis_worn">Type of prothesis worn</string>
    <string name="field_states_of_operation">States of operation</string>
    <string name="field_type_of_cargo">Type of cargo</string>
    <string name="field_average_period_of_driving_time">Average period</string>
    <string name="field_type_of_operation">Type of operation</string>
    <string name="field_num_of_years_experience">Number of years experience driving type</string>
    <string name="field_num_of_years_driving">Number of years driving all types of vehicles</string>
    <string name="field_vehicle_type">Vehicle type</string>
    <string name="field_bus_seating_capacity">Bus Seating Capacity</string>
    <string name="field_make">Make</string>
    <string name="field_year">Year</string>
    <string name="field_description_of_vehicles">Description of vehicle\'s</string>
    <string name="field_transmission_type">Transmission Type</string>
    <string name="field_num_of_forward_speeds">Number of Forward Speeds</string>
    <string name="field_rear_axle_speed">Rear Axle Speed</string>
    <string name="field_type_brake_system">Type Brake System</string>
    <string name="field_steering">Steering</string>
    <string name="field_semitrailers">Semitrailers of full trailers</string>
    <string name="field_description_of_trailers">Description of trailers</string>
    <string name="field_description_of_vehicle_modifications">Description of vehicle modifications</string>
    <string name="field_instructor">Instructor</string>
    <string name="field_instructor_first_name">Instructor First Name</string>
    <string name="field_instructor_last_name">Instructor Last Name</string>
    <string name="field_instructor_driver_license_num">Instructor Driver license number</string>
    <string name="field_instructor_location">Location</string>
    <string name="dialog_title_trucks">Trucks</string>
    <string name="app_version">Version \n %d (%s)</string>
    <string name="app_version2">Version %d (%s)</string>
    <string name="field_title_last_employer">Last Employer</string>
    <string name="field_title_second_last_employer">Second Employer</string>
    <string name="field_title_third_last_employer">Third Employer</string>
    <string name="field_title_driver">Driver</string>
    <string name="field_last_employer_name">Last employer name</string>
    <string name="field_last_employer_address">Last employer address</string>
    <string name="field_last_employer_city">Last employer city</string>
    <string name="field_last_employer_state">Last employer state</string>
    <string name="field_last_employer_zip_code">Last employer zipcode</string>
    <string name="field_last_employer_telephone_number">Last employer telephone number</string>
    <string name="field_last_employer_reason_for_leaving">Last employer reasons for leaving</string>
    <string name="field_second_last_employer_name">Second last employer name</string>
    <string name="field_second_last_employer_address">Second last employer address</string>
    <string name="field_second_last_employer_city">Second last employer city</string>
    <string name="field_second_last_employer_state">Second last employer state</string>
    <string name="field_second_last_employer_zip_code">Second last employer zipcode</string>
    <string name="field_second_last_employer_telephone_number">Second last employer telephone number</string>
    <string name="field_second_last_employer_reason_for_leaving">Second last employer reasons for leaving</string>
    <string name="field_third_last_employer_name">Third last employer name</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="work">Work</string>
    <string name="status">Status</string>
    <string name="drop">Drop</string>
    <string name="pickup">Pickup</string>
    <string name="save">Save</string>
    <string name="pre_trip_check">PreTrip Check</string>
    <string name="brakes_">Brakes</string>
    <string name="springs_">Springs</string>
    <string name="tires_">Tires</string>
    <string name="wheels_and_rims">Wheels and Rims</string>
    <string name="other_">Other</string>
    <string name="trailer_NO_S">TRAILER NO.(S)</string>
    <string name="reefer_HOS">Reefer HOS</string>
    <string name="brake_Connections">Brake Connections</string>
    <string name="Coupling_King_Pin">Coupling (King) Pin</string>
    <string name="coupling_chains">Coupling Chains</string>
    <string name="doors_">Doors</string>
    <string name="hitch_">Hitch</string>
    <string name="landing_gear_">Landing Gear</string>
    <string name="lights_all">Lights All</string>
    <string name="roof_">Roof</string>
    <string name="tarpaulin_">Tarpaulin</string>
</resources>