<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/work"
            android:textColor="@color/white"
            android:textSize="@dimen/rco_trucks_small_text_size" />

        <TextView
            android:id="@+id/btn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:button="@null"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="@dimen/rco_trucks_small_text_size" />

        <TextView
            android:id="@+id/drop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:button="@null"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/drop"
            android:textColor="@color/white"
            android:textSize="@dimen/rco_trucks_small_text_size" />

        <TextView
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:button="@null"
            android:fontFamily="@font/manrope_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/pickup"
            android:textColor="@color/white"
            android:textSize="@dimen/rco_trucks_small_text_size" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            app:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>